# Pole_Scraping

./: README.md  hello.py  pyproject.toml  requirements.txt  streamlit_app.py  test_model.joblib
data/clean_df/: DataFrame.json
data/ml/metrics/: metrics_boosting_allure.csv
data/ml/parameters/: param_boosting_allure.csv
data/ml/results/: results_boosting_allure.csv
data/results_scrap/: data_set_infos_circuits.json  data_set_qualifs.json
src/: clean_dataset.py
src/app/: fonction_streamlit_app.py
src/ml/: lib_fonctions_ML.py
src/scrapping/: lib_scrap_circuit.py  lib_scrap_qualif.py
tests/: test_clean_dataset.py  test_fonction_streamlit.py  test_fonctions_ml.py  test_lib_scrap_circuit.py  test_lib_scrap_qualif.py
