[project]
name = "pole-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "dataclasses>=0.8",
    "joblib>=1.4.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.20.0",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "selenium>=4.27.1",
    "streamlit>=1.41.1",
    "typing>=3.10.0.0",
]
